Alignment correct

--- a/src/components/Admin/AdminPage.css
+++ b/src/components/Admin/AdminPage.css
@@ -1,8 +1,11 @@
 .dashboardContainer{
-    margin: 2rem !important;
+    margin-top: 2rem;
 }
 .sideHeaders{
     padding: 10px;
+}
+.adminDashboardMain{
+    background: #EDF2F6;
 }
 .sideDashboard{
     color: white;
